Saving to mess with it

--- a/[2] Preprocessor.ipynb
+++ b/[2] Preprocessor.ipynb
@@ -178,24 +178,24 @@
     "    lst = []\n",
     "    for text in series:\n",
     "         # mark @, # and links\n",
-    "        text = ' '.join(['_at_someone_' if '@' in word else word for word in text.split()])\n",
-    "        text = ' '.join(['_link_' if 'http' in word or 'www.' in word else word for word in text.split()])\n",
-    "        text = ' '.join(['_hashtag_' if '#' in word else word for word in text.split()])\n",
+    "#         text = ' '.join(['_at_someone_' if '@' in word else word for word in text.split()])\n",
+    "#         text = ' '.join(['_link_' if 'http' in word or 'www.' in word else word for word in text.split()])\n",
+    "#         text = ' '.join(['_hashtag_' if '#' in word else word for word in text.split()])\n",
     "        # remove all other punctuation\n",
-    "        text = ''.join([word.lower() for word in text if word not in string.punctuation.replace('@','').replace('#','').replace('_','')])\n",
+    "#         text = ''.join([word.lower() for word in text if word not in string.punctuation.replace('@','').replace('#','').replace('_','')])\n",
     "\n",
     "        # the real work, pos tagging to reduce Nouns and other things that don't matter\n",
-    "        tokens = []\n",
-    "        for a in nltk.pos_tag(text.split()):\n",
-    "            # keep these as-is for reasons\n",
-    "            if '_link_' in a[0] or '_at_someone_' in a[0] or '_hashtag_' in a[0]:\n",
-    "                tokens.append(a[0])\n",
-    "            # lemmatize these to reduce parts of speach issues\n",
-    "            elif 'IN' in a[1] or 'V' in a[1] or 'DT' in a[1] or 'CC' in a[1] or 'MD' in a[1] or 'PDT' in a[1]:\n",
-    "                tokens.append(nltk.PorterStemmer().stem(a[0]))\n",
-    "            else:\n",
-    "                tokens.append(a[1])\n",
-    "Verbsand coordinating conjunctions\n",
+    "#         tokens = []\n",
+    "#         for a in nltk.pos_tag(text.split()):\n",
+    "#             # keep these as-is for reasons\n",
+    "#             if '_link_' in a[0] or '_at_someone_' in a[0] or '_hashtag_' in a[0]:\n",
+    "#                 tokens.append(a[0])\n",
+    "#             # lemmatize these to reduce parts of speach issues\n",
+    "#             elif 'IN' in a[1] or 'V' in a[1] or 'DT' in a[1] or 'CC' in a[1] or 'MD' in a[1] or 'PDT' in a[1]:\n",
+    "#                 tokens.append(nltk.PorterStemmer().stem(a[0]))\n",
+    "#             else:\n",
+    "#                 tokens.append(a[1])\n",
+    "        tokens = [a[1] for a in ]\n",
     "        lst.append(' '.join(tokens))\n",
     "    return lst "
    ]
