--- a/[4] LDA.ipynb
+++ b/[4] LDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -32,52 +32,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv = pickle.load( open( \"models/countVectorizer.pickle\", \"rb\" ) )\n",
-    "scaler = pickle.load( open( \"models/scaler.pickle\", \"rb\" ) )\n",
-    "lr = pickle.load( open( \"models/regression.pickle\", \"rb\" ) )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "\n",
-    "# dct = {}\n",
-    "# vocab = cv.vocabulary_\n",
-    "# k = 0\n",
-    "# for n, coef in enumerate(lr.coef_[0]):\n",
-    "#     if coef > 0:\n",
-    "#         dct[list(vocab.keys())[list(vocab.values()).index(n)]] = (k)\n",
-    "#         k += 1\n",
-    "# cvs = TfidfVectorizer(vocabulary=dct, ngram_range=(2,5))\n",
-    "# cvs.fit(df['Processed'])\n",
-    "X = cv.transform(df[df['Category']==1]['Processed'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<2285628x16145 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 41032667 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'TfidfVectorizerCountVectorizer' from 'sklearn.feature_extraction.text' (C:\\Users\\darin\\Anaconda3\\lib\\site-packages\\sklearn\\feature_extraction\\text.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-26d6f2715b98>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeature_extraction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mTfidfVectorizerCountVectorizer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Category'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mcv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCountVectorizer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mngram_range\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmin_df\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m500\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_df\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m.7\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'TfidfVectorizerCountVectorizer' from 'sklearn.feature_extraction.text' (C:\\Users\\darin\\Anaconda3\\lib\\site-packages\\sklearn\\feature_extraction\\text.py)"
+     ]
     }
    ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizerCountVectorizer\n",
+    "\n",
+    "df = df[df['Category']==1].copy()\n",
+    "\n",
+    "cv = CountVectorizer(ngram_range=(1,5), min_df=500, max_df=.7)\n",
+    "cv.fit(df['Tweet'] + '           ' + df['Processed'])\n",
+    "X = cv.transform(df['Tweet'] + '           ' + df['Processed'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "X"
    ]
@@ -99,7 +83,7 @@
     "\n",
     "start = time.time()\n",
     "\n",
-    "search_params = {'n_components': [10, 15, 20, 25, 30], 'learning_decay': [.5, .7, .9]}\n",
+    "search_params = {'n_components': [10, 15, 20, 25, 30], 'learning_decay': [.7, .9], 'max_iter':[3], 'verbose':[5]}\n",
     "\n",
     "# Init the Model\n",
     "lda = LatentDirichletAllocation()\n",
