--- a/[2] Preprocessor.ipynb
+++ b/[2] Preprocessor.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,31 +178,31 @@
     "    lst = []\n",
     "    for text in series:\n",
     "         # mark @, # and links\n",
-    "#         text = ' '.join(['_at_someone_' if '@' in word else word for word in text.split()])\n",
-    "#         text = ' '.join(['_link_' if 'http' in word or 'www.' in word else word for word in text.split()])\n",
-    "#         text = ' '.join(['_hashtag_' if '#' in word else word for word in text.split()])\n",
+    "        text = ' '.join(['_at_someone_' if '@' in word else word for word in text.split()])\n",
+    "        text = ' '.join(['_link_' if 'http' in word or 'www.' in word else word for word in text.split()])\n",
+    "        text = ' '.join(['_hashtag_' if '#' in word else word for word in text.split()])\n",
     "        # remove all other punctuation\n",
-    "#         text = ''.join([word.lower() for word in text if word not in string.punctuation.replace('@','').replace('#','').replace('_','')])\n",
+    "        text = ''.join([word.lower() for word in text if word not in string.punctuation.replace('@','').replace('#','').replace('_','')])\n",
     "\n",
     "        # the real work, pos tagging to reduce Nouns and other things that don't matter\n",
-    "#         tokens = []\n",
-    "#         for a in nltk.pos_tag(text.split()):\n",
-    "#             # keep these as-is for reasons\n",
-    "#             if '_link_' in a[0] or '_at_someone_' in a[0] or '_hashtag_' in a[0]:\n",
-    "#                 tokens.append(a[0])\n",
+    "        tokens = []\n",
+    "        for a in nltk.pos_tag(text.split()):\n",
+    "            # keep these as-is for reasons\n",
+    "            if '_link_' in a[0] or '_at_someone_' in a[0] or '_hashtag_' in a[0]:\n",
+    "                tokens.append(a[0])\n",
     "#             # lemmatize these to reduce parts of speach issues\n",
     "#             elif 'IN' in a[1] or 'V' in a[1] or 'DT' in a[1] or 'CC' in a[1] or 'MD' in a[1] or 'PDT' in a[1]:\n",
     "#                 tokens.append(nltk.PorterStemmer().stem(a[0]))\n",
-    "#             else:\n",
-    "#                 tokens.append(a[1])\n",
-    "        tokens = [a[1] for a in ]\n",
+    "            else:\n",
+    "                tokens.append(a[1])\n",
+    "       \n",
     "        lst.append(' '.join(tokens))\n",
     "    return lst "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -238,35 +238,35 @@
        "      <td>i love lebron. http://bit.ly/PdHur</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>NN love NN _link_</td>\n",
+       "      <td>NN VBP NN _link_</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>@ludajuice Lebron is a Beast, but I'm still ch...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>_at_someone_ NN is a NN but NN RB cheer CD the...</td>\n",
+       "      <td>_at_someone_ NN VBZ DT NN CC NN RB VBG CD DT N...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>@wordwhizkid Lebron is a beast... nobody in th...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>_at_someone_ NN is a NN NN in the NN come RB JJ</td>\n",
+       "      <td>_at_someone_ NN VBZ DT NN NN IN DT NN VBZ RB JJ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bill Simmons in conversation with Malcolm Glad...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>NN NNS in NN with NN NN _link_</td>\n",
+       "      <td>NN NNS IN NN IN NN NN _link_</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>playing with Java and the Twitter API</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>play with NN and the NN NN</td>\n",
+       "      <td>VBG IN NN CC DT NN NN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -281,14 +281,14 @@
        "4              playing with Java and the Twitter API         0    False   \n",
        "\n",
        "                                           Processed  \n",
-       "0                                  NN love NN _link_  \n",
-       "1  _at_someone_ NN is a NN but NN RB cheer CD the...  \n",
-       "2    _at_someone_ NN is a NN NN in the NN come RB JJ  \n",
-       "3                     NN NNS in NN with NN NN _link_  \n",
-       "4                         play with NN and the NN NN  "
+       "0                                   NN VBP NN _link_  \n",
+       "1  _at_someone_ NN VBZ DT NN CC NN RB VBG CD DT N...  \n",
+       "2    _at_someone_ NN VBZ DT NN NN IN DT NN VBZ RB JJ  \n",
+       "3                       NN NNS IN NN IN NN NN _link_  \n",
+       "4                              VBG IN NN CC DT NN NN  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,14 +302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It took 12106.464388847351 s to process/pos-tag the tweets.\n"
+      "It took 10542.641882419586 s to process/pos-tag the tweets.\n"
      ]
     },
     {
@@ -345,35 +345,35 @@
        "      <td>i love lebron. http://bit.ly/PdHur</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>NN love NN _link_</td>\n",
+       "      <td>NN VBP NN _link_</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>@ludajuice Lebron is a Beast, but I'm still ch...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>_at_someone_ NN is a NN but NN RB cheer CD the...</td>\n",
+       "      <td>_at_someone_ NN VBZ DT NN CC NN RB VBG CD DT N...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>@wordwhizkid Lebron is a beast... nobody in th...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>_at_someone_ NN is a NN NN in the NN come RB JJ</td>\n",
+       "      <td>_at_someone_ NN VBZ DT NN NN IN DT NN VBZ RB JJ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bill Simmons in conversation with Malcolm Glad...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>NN NNS in NN with NN NN _link_</td>\n",
+       "      <td>NN NNS IN NN IN NN NN _link_</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>playing with Java and the Twitter API</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>play with NN and the NN NN</td>\n",
+       "      <td>VBG IN NN CC DT NN NN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -388,14 +388,14 @@
        "4              playing with Java and the Twitter API         0    False   \n",
        "\n",
        "                                           Processed  \n",
-       "0                                  NN love NN _link_  \n",
-       "1  _at_someone_ NN is a NN but NN RB cheer CD the...  \n",
-       "2    _at_someone_ NN is a NN NN in the NN come RB JJ  \n",
-       "3                     NN NNS in NN with NN NN _link_  \n",
-       "4                         play with NN and the NN NN  "
+       "0                                   NN VBP NN _link_  \n",
+       "1  _at_someone_ NN VBZ DT NN CC NN RB VBG CD DT N...  \n",
+       "2    _at_someone_ NN VBZ DT NN NN IN DT NN VBZ RB JJ  \n",
+       "3                       NN NNS IN NN IN NN NN _link_  \n",
+       "4                              VBG IN NN CC DT NN NN  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
