Replacing with new

--- a/[2] Preprocessor.ipynb
+++ b/[2] Preprocessor.ipynb
@@ -177,24 +177,24 @@
     "     # @somone to @\n",
     "    lst = []\n",
     "    for text in series:\n",
-    "         # mark @, # and links\n",
-    "        text = ' '.join(['_at_someone_' if '@' in word else word for word in text.split()])\n",
-    "        text = ' '.join(['_link_' if 'http' in word or 'www.' in word else word for word in text.split()])\n",
-    "        text = ' '.join(['_hashtag_' if '#' in word else word for word in text.split()])\n",
+    "         # remove hashtags, etc for grammer checking\n",
+    "        text = ' '.join(['' if '@' in word else word for word in text.split()])\n",
+    "        text = ' '.join(['' if 'http' in word or 'www.' in word else word for word in text.split()])\n",
+    "        text = ' '.join(['' if '#' in word else word for word in text.split()])\n",
     "        # remove all other punctuation\n",
     "        text = ''.join([word.lower() for word in text if word not in string.punctuation.replace('@','').replace('#','').replace('_','')])\n",
     "\n",
     "        # the real work, pos tagging to reduce Nouns and other things that don't matter\n",
-    "        tokens = []\n",
-    "        for a in nltk.pos_tag(text.split()):\n",
-    "            # keep these as-is for reasons\n",
-    "            if '_link_' in a[0] or '_at_someone_' in a[0] or '_hashtag_' in a[0]:\n",
-    "                tokens.append(a[0])\n",
-    "#             # lemmatize these to reduce parts of speach issues\n",
-    "#             elif 'IN' in a[1] or 'V' in a[1] or 'DT' in a[1] or 'CC' in a[1] or 'MD' in a[1] or 'PDT' in a[1]:\n",
-    "#                 tokens.append(nltk.PorterStemmer().stem(a[0]))\n",
-    "            else:\n",
-    "                tokens.append(a[1])\n",
+    "        tokens = [a[1] for a in nltk.pos_tag(text.split())]\n",
+    "#         for a in nltk.pos_tag(text.split()):\n",
+    "#             # keep these as-is for reasons\n",
+    "#             if '_link_' in a[0] or '_at_someone_' in a[0] or '_hashtag_' in a[0]:\n",
+    "#                 tokens.append(a[0])\n",
+    "# #             # lemmatize these to reduce parts of speach issues\n",
+    "# #             elif 'IN' in a[1] or 'V' in a[1] or 'DT' in a[1] or 'CC' in a[1] or 'MD' in a[1] or 'PDT' in a[1]:\n",
+    "# #                 tokens.append(nltk.PorterStemmer().stem(a[0]))\n",
+    "#             else:\n",
+    "#                 tokens.append(a[1])\n",
     "       \n",
     "        lst.append(' '.join(tokens))\n",
     "    return lst "
@@ -238,28 +238,28 @@
        "      <td>i love lebron. http://bit.ly/PdHur</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>NN VBP NN _link_</td>\n",
+       "      <td>NN VBP NN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>@ludajuice Lebron is a Beast, but I'm still ch...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>_at_someone_ NN VBZ DT NN CC NN RB VBG CD DT N...</td>\n",
+       "      <td>NN VBZ DT NN CC NN RB VBG CD DT NN DT NN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>@wordwhizkid Lebron is a beast... nobody in th...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>_at_someone_ NN VBZ DT NN NN IN DT NN VBZ RB JJ</td>\n",
+       "      <td>NN VBZ DT NN NN IN DT NN VBZ RB JJ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bill Simmons in conversation with Malcolm Glad...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>NN NNS IN NN IN NN NN _link_</td>\n",
+       "      <td>NN NNS IN NN IN NN NN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -280,12 +280,12 @@
        "3  Bill Simmons in conversation with Malcolm Glad...         0    False   \n",
        "4              playing with Java and the Twitter API         0    False   \n",
        "\n",
-       "                                           Processed  \n",
-       "0                                   NN VBP NN _link_  \n",
-       "1  _at_someone_ NN VBZ DT NN CC NN RB VBG CD DT N...  \n",
-       "2    _at_someone_ NN VBZ DT NN NN IN DT NN VBZ RB JJ  \n",
-       "3                       NN NNS IN NN IN NN NN _link_  \n",
-       "4                              VBG IN NN CC DT NN NN  "
+       "                                  Processed  \n",
+       "0                                 NN VBP NN  \n",
+       "1  NN VBZ DT NN CC NN RB VBG CD DT NN DT NN  \n",
+       "2        NN VBZ DT NN NN IN DT NN VBZ RB JJ  \n",
+       "3                     NN NNS IN NN IN NN NN  \n",
+       "4                     VBG IN NN CC DT NN NN  "
       ]
      },
      "execution_count": 6,
@@ -309,7 +309,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It took 10542.641882419586 s to process/pos-tag the tweets.\n"
+      "It took 9274.957566261292 s to process/pos-tag the tweets.\n"
      ]
     },
     {
@@ -345,28 +345,28 @@
        "      <td>i love lebron. http://bit.ly/PdHur</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>NN VBP NN _link_</td>\n",
+       "      <td>NN VBP NN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>@ludajuice Lebron is a Beast, but I'm still ch...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>_at_someone_ NN VBZ DT NN CC NN RB VBG CD DT N...</td>\n",
+       "      <td>NN VBZ DT NN CC NN RB VBG CD DT NN DT NN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>@wordwhizkid Lebron is a beast... nobody in th...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>_at_someone_ NN VBZ DT NN NN IN DT NN VBZ RB JJ</td>\n",
+       "      <td>NN VBZ DT NN NN IN DT NN VBZ RB JJ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bill Simmons in conversation with Malcolm Glad...</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
-       "      <td>NN NNS IN NN IN NN NN _link_</td>\n",
+       "      <td>NN NNS IN NN IN NN NN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -387,12 +387,12 @@
        "3  Bill Simmons in conversation with Malcolm Glad...         0    False   \n",
        "4              playing with Java and the Twitter API         0    False   \n",
        "\n",
-       "                                           Processed  \n",
-       "0                                   NN VBP NN _link_  \n",
-       "1  _at_someone_ NN VBZ DT NN CC NN RB VBG CD DT N...  \n",
-       "2    _at_someone_ NN VBZ DT NN NN IN DT NN VBZ RB JJ  \n",
-       "3                       NN NNS IN NN IN NN NN _link_  \n",
-       "4                              VBG IN NN CC DT NN NN  "
+       "                                  Processed  \n",
+       "0                                 NN VBP NN  \n",
+       "1  NN VBZ DT NN CC NN RB VBG CD DT NN DT NN  \n",
+       "2        NN VBZ DT NN NN IN DT NN VBZ RB JJ  \n",
+       "3                     NN NNS IN NN IN NN NN  \n",
+       "4                     VBG IN NN CC DT NN NN  "
       ]
      },
      "execution_count": 7,
